2006-12-11  Brian Warner  <warner@lothar.com>

	* buildbot/process/maxq.py: remove this, the functionality now
	lives in buildbot.steps.maxq

	* buildbot/clients/debug.py: remove an unnecessary gnome.ui import
	* buildbot/clients/gtkPanes.py: remove unused import

	* buildbot/slave/trial.py: remove an unused/incomplete/buggy file,
	that was meant to provide a special Reporter to run inside trial
	and give the buildslave lots of machine-readable status. We never
	finished this project.

	* buildbot/changes/bonsaipoller.py: remove unused imports
	* buildbot/changes/svnpoller.py: same
	* buildbot/process/builder.py: same
	* buildbot/process/buildstep.py: same
	* buildbot/slave/bot.py: hush pyflakes warning
	* buildbot/status/tests.py: remove unused imports
	* buildbot/status/tinderbox.py: same
	* buildbot/steps/python_twisted.py: same

	* buildbot/process/step.py: remove this file, these names were
	deprecated in 0.7.5 and are now being removed.
	* buildbot/process/step_twisted.py: same
	* buildbot/test/test_steps.py (ReorgCompatibility): remove test

	* buildbot/twcompat.py: remove the empty file, yay it is gone

	* buildbot/twcompat.py (waitForDeferred): remove the monkeypatch,
	tw-2.0.0 and newer have the method we need.
	(getProcessOutputAndValue): same
	(which): remove this method, tw-2.0.0 t.p.procutils has it

	* buildbot/twcompat.py (implements): remove this method
	* buildbot/*: import implements() from zope.interface directly

	* buildbot/status/mail.py: stop falling back to importing
	twisted.protocols.smtp.sendmail, now that we don't need tw-1.3.0
	support

	* buildbot/twcompat.py (Interface): remove this import
	* buildbot/*: import Interface from zope.interface directly

	* buildbot/twcompat.py (providedBy): remove this method
	* buildbot/*: turn all uses of providedBy(obj, iface) into
	iface.providedBy(obj)

	* buildbot/twcompat.py (maybeWait): remove this method, now that
	we no longer maintain compatibility with Twisted<=1.3.0 .